--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,10 @@ jobs:
     - uses: ammaraskar/sphinx-action@master
       with:
         docs-folder: "docs/"
-    - name: build 
+    - name: deploy 
       env: 
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          FOLDER: docs/
+          FOLDER: docs/_build/html
       run: | 
         cd $GITHUB_WORKSPACE
         git init 
