--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,8 @@ jobs:
       run: | 
         cd $GITHUB_WORKSPACE
         ls
-        pwd
+        ls docs
+        ls docs/_build
         git init 
         git config user.name "Github Actions"
         git config user.email "github-actions-bot@users.noreply.github.com"
