--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,12 +17,10 @@ jobs:
     - uses: actions/checkout@v1
     - name: install 
       run: | 
-        cd docs 
-        sudo pip3 install -r requirements.txt
+        cd docs && sudo pip3 install -r requirements.txt
     - name: build 
       run: | 
-        cd docs
-        sphinx-build -b html . _build
+        cd docs && sphinx-build -b html . _build
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
