--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
           python3 -m pip install -r ./requirements.txt
 
       - run: |
-          cd docs && make html
+          cd docs && make examples && make html 
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
