--- a/docs/Makefile
+++ b/docs/Makefile
@@ -14,7 +14,11 @@ help:
 
 .PHONY: help Makefile
 
+.PHONY: examples 
+examples: 
+	$(MAKE) -C examples 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
+
