Gfortran to compile packmol

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,7 @@ jobs:
           python3 -m pip install -r ./docs/requirements.txt
           python3 -m pip install -r ./requirements.txt
           python3 -m pip install .
+          sudo apt install gfortran
           wget https://github.com/m3g/packmol/archive/20.010.zip
           unzip 20.010.zip
           cd packmol-20.010
