Added support for triclinic geometry when packing water.

--- a/docs/examples/Makefile
+++ b/docs/examples/Makefile
@@ -1,14 +1,17 @@
 # Første linje
-examples: brucite_in_water
+examples: brucite_in_water alpha_quartz_cylinder_hole/alpha_quartz_cylinder_hole.png alpha_quartz_cylinder_hole_water/alpha_quartz_cylinder_hole_water.png
 
 .PHONY: brucite_in_water
 brucite_in_water: brucite_in_water/brucite_in_water_orthogonal.png brucite_in_water/brucite_in_water_perspective.png
 
-
 brucite_in_water/brucite_in_water_orthogonal.png brucite_in_water/brucite_in_water_perspective.png: brucite_in_water/brucite_in_water.py
 	cd brucite_in_water && python brucite_in_water.py && cd ..
 
+alpha_quartz_cylinder_hole/alpha_quartz_cylinder_hole.png: alpha_quartz_cylinder_hole/alpha_quartz_cylinder_hole.py
+	cd alpha_quartz_cylinder_hole && python alpha_quartz_cylinder_hole.py && cd ..
 
+alpha_quartz_cylinder_hole_water/alpha_quartz_cylinder_hole_water.png: alpha_quartz_cylinder_hole_water/alpha_quartz_cylinder_hole_water.py
+	cd alpha_quartz_cylinder_hole_water && python alpha_quartz_cylinder_hole_water.py && cd ..
 
 all: examples
 
