--- a/docs/examples/Makefile
+++ b/docs/examples/Makefile
@@ -13,5 +13,8 @@ alpha_quartz_cylinder_hole/alpha_quartz_cylinder_hole.png: alpha_quartz_cylinder
 alpha_quartz_cylinder_hole_water/alpha_quartz_cylinder_hole_water.png: alpha_quartz_cylinder_hole_water/alpha_quartz_cylinder_hole_water.py
 	cd alpha_quartz_cylinder_hole_water && python alpha_quartz_cylinder_hole_water.py && cd ..
 
+wedges_and_indenters/indenter_and_glass.png: wedges_and_indenters/indenter_over_silica.py
+	cd wedges_and_indenters && python indenter_over_silica.py && cd ..
+
 all: examples
 
