--- a/docs/Makefile
+++ b/docs/Makefile
@@ -17,6 +17,9 @@ help:
 .PHONY: examples 
 examples: 
 	$(MAKE) -C examples 
+
+getting_started: 
+	$(MAKE) -C getting_started
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
