--- a/docs/Makefile
+++ b/docs/Makefile
@@ -18,8 +18,10 @@ help:
 examples: 
 	$(MAKE) -C examples 
 
+.PHONY: getting_started
 getting_started: 
 	$(MAKE) -C getting_started
+	
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
