--- a/docs/examples/Makefile
+++ b/docs/examples/Makefile
@@ -1,5 +1,5 @@
 # Første linje
-examples: brucite_in_water alpha_quartz_cylinder_hole/alpha_quartz_cylinder_hole.png alpha_quartz_cylinder_hole_water/alpha_quartz_cylinder_hole_water.png wedges_and_indenters/indenter_and_glass.png
+examples: brucite_in_water alpha_quartz_cylinder_hole/alpha_quartz_cylinder_hole.png alpha_quartz_cylinder_hole_water/alpha_quartz_cylinder_hole_water.png wedges_and_indenters/indenter_and_glass.png silicon_carbide
 
 .PHONY: brucite_in_water
 brucite_in_water: brucite_in_water/brucite_in_water_orthogonal.png brucite_in_water/brucite_in_water_perspective.png
@@ -15,6 +15,17 @@ alpha_quartz_cylinder_hole_water/alpha_quartz_cylinder_hole_water.png: alpha_qua
 
 wedges_and_indenters/indenter_and_glass.png: wedges_and_indenters/indenter_over_silica.py
 	cd wedges_and_indenters && python indenter_over_silica.py && cd ..
+
+silicon_carbide: silicon_carbide_nanoparticles/box.png silicon_carbide_nanoparticles/cylinder.png silicon_carbide_nanoparticles/sphere.png
+
+silicon_carbide_nanoparticles/box.png: 
+	cd silicon_carbide_nanoparticles && python box.py && cd ..
+
+silicon_carbide_nanoparticles/sphere.png:
+	cd silicon_carbide_nanoparticles && python sphere.py && cd ..
+
+silicon_carbide_nanoparticles/cylinder.png:
+	cd silicon_carbide_nanoparticles && python cylinder.py && cd ..
 
 all: examples
 
