Fixed bug where multiple png exports failed (left old system on scene). Moved procedural noise example into documentation.

--- a/docs/examples/Makefile
+++ b/docs/examples/Makefile
@@ -1,7 +1,6 @@
 # Første linje
-examples: sodium_chlorate_hydrocarbon_blob_water brucite_in_water alpha_quartz_cylinder_hole/alpha_quartz_cylinder_hole.png alpha_quartz_cylinder_hole_water/alpha_quartz_cylinder_hole_water.png wedges_and_indenters/indenter_and_glass.png silicon_carbide
+examples: procedural_noise sodium_chlorate_hydrocarbon_blob_water brucite_in_water alpha_quartz_cylinder_hole/alpha_quartz_cylinder_hole.png alpha_quartz_cylinder_hole_water/alpha_quartz_cylinder_hole_water.png wedges_and_indenters/indenter_over_silica.png silicon_carbide 
 
-.PHONY: brucite_in_water
 brucite_in_water: brucite_in_water/brucite_in_water_orthogonal.png brucite_in_water/brucite_in_water_perspective.png
 
 brucite_in_water/brucite_in_water_orthogonal.png brucite_in_water/brucite_in_water_perspective.png: brucite_in_water/brucite_in_water.py
@@ -13,7 +12,7 @@ alpha_quartz_cylinder_hole/alpha_quartz_cylinder_hole.png: alpha_quartz_cylinder
 alpha_quartz_cylinder_hole_water/alpha_quartz_cylinder_hole_water.png: alpha_quartz_cylinder_hole_water/alpha_quartz_cylinder_hole_water.py
 	cd alpha_quartz_cylinder_hole_water && python alpha_quartz_cylinder_hole_water.py && cd ..
 
-wedges_and_indenters/indenter_and_glass.png: wedges_and_indenters/indenter_over_silica.py
+wedges_and_indenters/indenter_over_silica.png: wedges_and_indenters/indenter_over_silica.py
 	cd wedges_and_indenters && python indenter_over_silica.py && cd ..
 
 sodium_chlorate_hydrocarbon_blob_water: sodium_chlorate_hydrocarbon_blob_water/sodium_chlorate_hydrocarbon_blob_water.png
@@ -23,14 +22,19 @@ sodium_chlorate_hydrocarbon_blob_water/sodium_chlorate_hydrocarbon_blob_water.pn
 
 silicon_carbide: silicon_carbide_nanoparticles/box.png silicon_carbide_nanoparticles/cylinder.png silicon_carbide_nanoparticles/sphere.png
 
-silicon_carbide_nanoparticles/box.png: 
+silicon_carbide_nanoparticles/box.png: silicon_carbide_nanoparticles/box.py
 	cd silicon_carbide_nanoparticles && python box.py && cd ..
 
-silicon_carbide_nanoparticles/sphere.png:
+silicon_carbide_nanoparticles/sphere.png: silicon_carbide_nanoparticles/sphere.py
 	cd silicon_carbide_nanoparticles && python sphere.py && cd ..
 
-silicon_carbide_nanoparticles/cylinder.png:
+silicon_carbide_nanoparticles/cylinder.png: silicon_carbide_nanoparticles/cylinder.py
 	cd silicon_carbide_nanoparticles && python cylinder.py && cd ..
+
+procedural_noise: procedural_noise/block_with_procedural_surface.png procedural_noise/block.png
+
+procedural_noise/block_with_procedural_surface.png procedural_noise/block.png: procedural_noise/proceduralsurface.py
+	cd procedural_noise && python proceduralsurface.py && cd ..
 
 all: examples
 
