--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,7 @@ on:
   push:
     branches: 
       - master
+      - cracks
   
 jobs:
   deploy:
@@ -57,4 +58,5 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           force_orphan: true
           publish_dir: ./docs/_build/html
+          destination_dir: ${( steps.branch.outputs.BRANCH_NAME }}
 
