--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,6 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           force_orphan: true
           publish_dir: ./docs/_build/html
-          destination_dir: ${{ steps.branch.outputs.BRANCH_NAME }}
+          destination_dir: ${{ github.ref }}
 
 
