--- a/docs/getting_started/Makefile
+++ b/docs/getting_started/Makefile
@@ -1,5 +1,5 @@
 # Første linje
-getting_started: python/alpha_quartz.png python/beta_cristobalite.png
+getting_started: python/alpha_quartz.png python/beta_cristobalite.png python/amorphous_silica.png
 
 python/alpha_quartz.png:
 	cd python && python bulk_alpha_quartz.py && cd ..
