--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,7 @@ jobs:
 
       - name: Install dependencies
         run: | 
+          python3 -m pip install numpy 
           python3 -m pip install -r ./docs/requirements.txt
           python3 -m pip install .
           sudo apt install gfortran
